src/app/components/taskbar/taskbar.module.css
.taskbar {
  display: grid;

  grid-template:
    [row1-start] "a b c d e" 5vh [row1-end]
    / 2.5vh 150px 2.5vh 1fr 0.075fr;

  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 5vh;
}

.taskbarLine {
  grid-area: a / c / a / d;
  background: rgb(36, 93, 219);
  background: linear-gradient(
    180deg,
    rgba(36, 93, 219, 1) 0%,
    rgba(70, 144, 230, 1) 4%,
    rgba(32, 87, 215, 1) 16%,
    rgba(36, 93, 219, 1) 49%,
    rgba(38, 99, 224, 1) 91%,
    rgba(25, 64, 165, 1) 96%
  );
  z-index: 1;

  display: flex;
  align-items: center;
  justify-content: left;
  padding-left: 4.5vh;
  min-width: max-content;
}

.SysTray {
  grid-area: a / e / a / e;
  background: rgb(18, 144, 233);
  background: linear-gradient(
    180deg,
    rgba(18, 144, 233, 1) 0%,
    rgba(24, 184, 243, 1) 4%,
    rgba(18, 144, 233, 1) 16%,
    rgba(12, 141, 234, 1) 49%,
    rgba(13, 161, 242, 1) 91%,
    rgba(17, 115, 212, 1) 96%
  );
  z-index: 2;
  box-shadow: inset 10px 0 2px -6.5px #18b8f3, -1px 0px 2px black;

  display: flex;
  align-items: center;
  justify-content: center;
  min-width: max-content;
}

/* Only do styling of open icon here, sizing and positioning in tsx. Not working doing it here */
.openAppIcon {
  background: rgb(19, 135, 247);
  background: linear-gradient(
    180deg,
    rgba(19, 135, 247, 1) 0%,
    rgba(43, 146, 250, 1) 4%,
    rgba(19, 135, 247, 1) 16%
  );
  box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181, 1),
    inset 1px 0px 2px 1px #4699f9;
  border-radius: 3px;
}

